# BOS_App

./: .gitignore  README.md  config_example.yaml  pyproject.toml  requirements.txt
bos_pipeline/: __init__.py  app.py  calibration.py  cli.py  export.py  video_export.py  visualization.py
bos_pipeline/api/: __init__.py  main.py  models.py  routes.py  websocket.py
bos_pipeline/io/: __init__.py  avi.py  base.py  dalsa.py  photron.py
bos_pipeline/processing/: __init__.py  abel.py  background_patterns.py  concentration.py  displacement.py  preprocess.py  velocity.py
docs/: PARAMETERS.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/FileLoader/: FileLoader.module.css  FileLoader.tsx
frontend/src/components/Kymograph/: Kymograph.module.css  Kymograph.tsx
frontend/src/components/ProcessingConfig/: ProcessingConfig.module.css  ProcessingConfig.tsx
frontend/src/components/ResultsViewer/: PlotPanel.tsx  ResultsViewer.module.css  ResultsViewer.tsx
frontend/src/components/StatusBar/: StatusBar.module.css  StatusBar.tsx
frontend/src/hooks/: useProcessing.ts  useWebSocket.ts
frontend/src/store/: analysisStore.ts
frontend/src/styles/: global.css
frontend/src/types/: analysis.ts
notebooks/: bos_demo.ipynb
tests/: generate_synthetic_data.py  test_abel.py  test_displacement.py
