[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bos_pipeline"
version = "0.1.0"
description = "Background-Oriented Schlieren image processing pipeline for Photron and Teledyne DALSA cameras"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "CoStudy GmbH" },
]
keywords = ["BOS", "schlieren", "optical flow", "image processing", "fluid dynamics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-image>=0.21",
    "opencv-python>=4.8",
    "matplotlib>=3.7",
    "tifffile>=2023.1",
    "h5py>=3.9",
    "pyyaml>=6.0",
    "PyAbel>=0.9",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.6",          # Desktop GUI application
]
photron = [
    "pyMRAW>=0.30",          # Photron .mraw reader
]
live = [
    "harvesters>=1.4",       # GenICam/GigE Vision live acquisition
    "genicam>=1.1",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "jupyter>=1.0",
    "ipykernel>=6.25",
    "PySide6>=6.6",
]
all = [
    "PySide6>=6.6",
    "pyMRAW>=0.30",
    "harvesters>=1.4",
    "genicam>=1.1",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "jupyter>=1.0",
    "ipykernel>=6.25",
]

[project.scripts]
bos_process = "bos_pipeline.cli:main"
bos_app     = "bos_pipeline.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bos_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
